[tool.poetry]
name = "py-test-utils"
version = "0.1.0"
description = "Utilities to support generation of test data."
authors = ["Larry Jones <mrwizard82d1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Faker = "^25.2.0"
cytoolz = "^0.12.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
